# API-for-workflow-management

./: .gitignore  Dockerfile  README.md  pyproject.toml
alembic/versions/: 2024_05_23_1331-19b37a6016d3_create_tables.py
src/: config.py  database.py  main.py  models.py
src/api_v1/: condition_node.py  edge.py  end_node.py  message_node.py  routers.py  start_node.py  workflow.py
src/repositories/: condition_node.py  edge.py  end_node.py  message_node.py  node.py  repository_base.py  signle_node.py  start_node.py  workflow.py
src/schemas/: condition_node.py  edge.py  end_node.py  message_node.py  start_node.py  workflow.py
tests/: conftest.py  test_1_start_node.py  test_2_message_node.py  test_3_condition_node.py  test_4_end_node.py  test_5_edge.py  test_6_workflow.py
